//Refer https://codelabs.developers.google.com/codelabs/cloud-grpc-java#2

syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpctest.helloproto";
option java_outer_classname = "HelloProtoOuterClass";
option objc_class_prefix = "HL";

package helloworld;

// The greeting service definition.
service HelloService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string firstname = 1;
  string lastname = 2;
}

// The response message containing the greetings
message HelloResponse {
  string data = 1;
}

